feat(agent): add fixed report read facade